# practice_2026

./: .gitignore  Makefile  README.md  compose.yaml
loki/: config.yaml
postgres/: Dockerfile  init.sql
server/: Dockerfile  index_documents.py  loki_init.py  main.py  pyproject.toml  rag.py
