[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clickhouse-connect>=1.4.2",
    "fastembed>=0.8.0",
    "fastmcp>=3.4.4",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "psycopg[binary]>=3.3.4",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-logging-loki>=0.3.1",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.51.0",
]
